--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -7,6 +7,18 @@
             padding-right: 25px;
         }
     }
+    .flat-title-v2{
+        margin-bottom: 50px;
+    }
+    .flat-feature-v2{
+        .flat-title-v2{
+            max-width: 723px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 50px;
+            padding: 0 90px;
+        }
+    }
 }
 @media only screen and (min-width: 1150px) {
     .banner-page-title {
@@ -125,6 +137,11 @@
         font-size: 30px;
         line-height: 34px;
     }
+    h4,
+    .h4{
+        font-size: 24px;
+        line-height: 27.4px;
+    }
 
     .mobile-button {
         display: block;
@@ -145,6 +162,13 @@
     }
     .widget-count {
         gap: 15px;
+    }
+    .flat-title-v2{
+        h2{
+            br{
+                display: none;
+            }
+        }
     }
 }
 
