--- a/src/styles/scss/component/_avatar.scss
+++ b/src/styles/scss/component/_avatar.scss
@@ -32,6 +32,11 @@
     min-width: 60px;
     height: 60px;
 }
+.avt-70 {
+    width: 70px;
+    min-width: 70px;
+    height: 70px;
+}
 .avt-100 {
     width: 100px;
     min-width: 100px;
