--- a/src/styles/scss/abstracts/_variable.scss
+++ b/src/styles/scss/abstracts/_variable.scss
@@ -21,13 +21,13 @@
 	// rgba
 	--rgba-primary-1: rgb(69, 13, 135, 0.02);
 	--rgba-primary-2: rgb(69, 13, 135, 0.06);
+	--rgba-primary-3: rgb(69, 13, 135, 0.1);
 	--rgba-blue: rgba(0, 183, 179, 0.3);
 	--rgba-black-2: rgb(48, 53, 56, 0.7);
 	--rgba-black-3: rgba(14, 13, 15, 0.5);
 
 	// liner gradient
 	--gradient-1: linear-gradient(102.29deg, #450d87 11.89%, #00b7b3 77.5%);
-	--gradient-2: linear-gradient(102.29deg, #450d87 11.89%, #00b7b3 77.5%);
 
 	--shadow-1: 0px 8px 30px 0px #0000001f;
 	--shadow-2: 0px 4px 20px 0px #0000000F;
