--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -170,6 +170,14 @@
             }
         }
     }
+    .creator-item{
+        .box-right{
+            gap: 15px;
+        }
+    } 
+    .flat-spacing-1{
+        padding: 60px 0px;
+    }
 }
 
 @media only screen and (max-width: 575px) {
