--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -298,6 +298,22 @@
 
 .flat-title {
 	margin-bottom: 26px;
+	.sub-title{
+		margin-top: 8px;
+	}
+	.view-all{
+		display: flex;
+		gap: 6px;
+		color: var(--primary);
+		font-family: var(--poppins);
+		font-weight: 500;
+		font-size: 15px;
+		line-height: 16.5px;
+		.icon{
+			font-size: 16px;
+			font-weight: 600;
+		}
+	}
 }
 .flat-title-v2{
 	margin-bottom: 30px;
@@ -330,6 +346,7 @@
 		gap: 20px;
 		justify-content: space-between;
 		align-items: center;
+		flex-wrap: wrap;
 	}
 	.box-right{
 		display: flex;
@@ -347,6 +364,27 @@
 			border-radius: 15px;
 			overflow: hidden;
 		}
+	}
+	.archive-bottom{
+		display: flex;
+		align-items: center;
+		gap: 21px;
+		overflow: auto;
+		.btn-more{
+			flex-shrink: 0;
+		}
+		.banner-img{
+			.image{
+				min-width: 153px;
+			}
+		}
+	}
+	.btn-more{
+		width: 70px;
+		height: 70px;
+		border-radius: 50%;
+		border: 1px solid var(--line);
+		@include flex(center, center);
 	}
 }
 .box-profile{
@@ -401,6 +439,146 @@
 		.icon{
 			font-size: 12px;
 			color: var(--white);
+		}
+	}
+}
+.tf-sw-feature-v2{
+	.creator-item{
+		.archive-bottom{
+			// overflow: unset;
+		}
+	}
+	
+}
+
+// table  ranking
+.wrap-ranking{
+	border-radius: 14px ;
+	overflow: hidden;
+	border: 1px solid #EEEEEE;
+}
+.table-ranking{
+	thead{
+		tr{
+			background-color: #F9F4FF;
+		}
+		th{
+			padding: 20px 20px 20px 30px;
+			font-family: var(--poppins);
+			font-weight: 500;
+			font-size: 16px;
+			line-height: 24px;
+			color: var(--black-1);
+			&:first-child{
+				width: 13%;
+			}
+		}
+	}
+	tbody{
+		td{
+			padding: 22px 20px 22px 30px;
+			align-content: center;
+			
+		}
+		tr{
+			&:not(:last-child){
+				td{
+					border-bottom: 1px solid #EEEEEE;
+				}
+			}
+		}
+	}
+	.author-box{
+		display: flex;
+		align-items: center;
+		gap: 6px;
+		img{
+			border-radius: 50%;
+		}
+	}
+
+}
+.pagination-box{
+	display: flex;
+	flex-wrap: wrap;
+	gap: 9px;
+	.nav-link{
+		width: 40px;
+		height: 40px;
+		@include flex(center, center);
+		font-size: 14px;
+		line-height: 21px;
+		font-weight: 600;
+		font-family: var(--poppins);
+		color: var(--black-1);
+		border-radius: 50%;
+		border: 1px solid transparent;
+		background-color: var(--white);
+		.icon{
+			font-size: 18px;
+			font-weight: 500;
+		}
+		&:hover,
+		&.active{
+			background-color: var(--primary);
+			color: var(--white);
+			border-color: var(--primary);
+		}
+	}
+	.arrow{
+		border-color: var(--line-2);
+	}
+}
+.breadcrumb{
+	display: flex;
+	padding: 16px 0px;
+	border-bottom: 1px solid #F0F0F5;
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	margin-bottom: 0px;
+	.item{
+		color: #7B7B7B;
+		font-size: 12px;
+		line-height: 13.2px;
+		position: relative;
+		&:not(:last-child){
+			padding-right: 20px;
+			&::after{
+				position: absolute;
+				font-family: var(--fontIcon);
+				content: "\e908";
+				right: 0;
+				top: 50%;
+				transform: translateY(-50%);
+			}
+		}
+	}
+}
+.flat-ranking{
+	.pagination-wrap{
+		margin-top: 26px;
+	}
+}
+.filter-wrap{
+	.box-title{
+		margin-bottom: 30px;
+		@include flex(center, space-between);
+	}
+	.box-clear{
+		display: flex;
+		align-items: center;
+		gap: 6px;
+		span{
+			color: var(--black-1);
+		}
+		.icon{
+			font-size: 20px;
+		}
+	}
+	.box-filter{
+		&:not(:last-child){
+			margin-bottom: 30px;
 		}
 	}
 }
