--- a/src/styles/scss/component/_carousel.scss
+++ b/src/styles/scss/component/_carousel.scss
@@ -18,3 +18,18 @@
         }
     }
 }
+.sw-pagination{
+    margin-top: 30px;
+    gap: 8px;
+    .swiper-pagination-bullet{
+        width: 10px;
+        height: 10px;
+        background-color: var(--white);
+        opacity: 1;
+        margin: 0 !important;
+    }
+    .swiper-pagination-bullet-active{
+        background-color: var(--primary);
+
+    }
+}
