--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -678,7 +678,11 @@
 	.dropdown-select{
 		display: flex;
 		gap: 8px;
-		
+		.dropdown-toggle{
+			padding: 0;
+			padding-right: 20px;
+			min-width: 120px;
+		}
 	}
 	
 }
