--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -142,6 +142,7 @@
         font-size: 24px;
         line-height: 27.4px;
     }
+   
 
     .mobile-button {
         display: block;
@@ -178,6 +179,18 @@
     .flat-spacing-1{
         padding: 60px 0px;
     }
+    .filter-wrap{
+        margin-bottom: 30px;
+    }
+    .box-text-notification{
+        padding: 15px;
+    }
+    .flat-template-category{
+        padding: 20px 0px 60px;
+    }
+    .meta-select-filter{
+        justify-content: flex-start;
+    }
 }
 
 @media only screen and (max-width: 575px) {
@@ -195,6 +208,10 @@
     .h3 {
         font-size: 20px;
         line-height: 24px;
+    }
+    h6{
+        font-size: 20px;
+        line-height: 22px;
     }
     .header {
         .box-account {
