--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -182,7 +182,7 @@
     .filter-wrap{
         margin-bottom: 30px;
     }
-    .box-text-notification{
+    .card-box-2{
         padding: 15px;
     }
     .flat-template-category{
@@ -231,5 +231,8 @@
     .box-counter .count .suffix {
         font-size: 18px;
         line-height: 18px;
+    }
+    .creator-item{
+        padding: 15px;
     }
 }
