--- a/src/styles/scss/abstracts/_variable.scss
+++ b/src/styles/scss/abstracts/_variable.scss
@@ -22,6 +22,8 @@
 	--rgba-primary-1: rgb(69, 13, 135, 0.02);
 	--rgba-primary-2: rgb(69, 13, 135, 0.06);
 	--rgba-primary-3: rgb(69, 13, 135, 0.1);
+	--rgba-primary-4: rgb(69, 13, 135, 0.15);
+	--rgba-primary-sub-1: rgba(0, 183, 179, 0.15);
 	--rgba-blue: rgba(0, 183, 179, 0.3);
 	--rgba-black-2: rgb(48, 53, 56, 0.7);
 	--rgba-black-3: rgba(14, 13, 15, 0.5);
