--- a/src/styles/scss/component/_index.scss
+++ b/src/styles/scss/component/_index.scss
@@ -13,7 +13,7 @@
 /*------------ form ---------------- */
 @import "form";
 /*------------ nice select ---------------- */
-@import "nice-select";
+@import "select";
 /*------------ carousel ---------------- */
 @import "carousel";
 /*------------ avatar ---------------- */
