--- a/src/styles/scss/component/_avatar.scss
+++ b/src/styles/scss/component/_avatar.scss
@@ -22,6 +22,11 @@
     min-width: 40px;
     height: 40px;
 }
+.avt-50{
+    width: 50px;
+    min-width: 50px;
+    height: 50px;
+}
 .avt-56 {
     width: 56px;
     min-width: 56px;
