--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -42,6 +42,22 @@
 			object-fit: cover;
 		}
 	}
+	&.banner-v2{
+		img {
+			width: 100%;
+			height: 400px;
+			object-fit: cover;
+		}
+		.banner-content {
+			top: 25%;
+			.title {
+				margin-bottom: 0;
+			}
+			.subtitle {
+				margin-top: 20px;
+			}
+		}
+	}
 	.banner-content {
 		position: absolute;
 		left: 0;
@@ -674,6 +690,7 @@
 	align-items: center;
 	gap: 30px;
 	flex-wrap: wrap;
+	margin-bottom: 39px;
 	.group-select-filter{
 		display: flex;
 		align-items: center;
@@ -683,7 +700,7 @@
 	
 }
 .flat-template-category{
-	padding: 39px 0px 80px;
+	padding: 0px 0px 80px;
 	.box{
 		margin-bottom: 30px;
 	}
@@ -859,6 +876,12 @@
 			color: var(--primary);
 		}
 	}
+	.box-need-more{
+		margin-bottom: 40px;
+		.h7,p{
+			margin-bottom: 20px;
+		}
+	}
 }
 .card-box-1{
 	border-radius: 14px;
@@ -902,7 +925,6 @@
 	}
 	.reply{
 		margin-top: 20px;
-		padding-left: 64px;
 	}
 	.submit-comment-form{
 		margin-top: 40px;
@@ -920,6 +942,8 @@
 	}
 	.info{
 		@include flex(center, space-between);
+		gap: 8px;
+		flex-wrap: wrap;
 		.name{
 			color: #333E48;
 		}
@@ -991,4 +1015,146 @@
 	.creator-item{
 		border: 1px solid var(--line-2);
 	}
+}
+
+.wrap-single-review{
+	.box-rate-review{
+		margin-bottom: 30px;
+		display: inline-flex;
+		flex-direction: column;
+		gap: 9px;
+	}
+	.heading{
+		display: inline-flex;
+		gap: 5px;
+		.title-rate-review{
+			font-family: var(--poppins);
+			font-size: 70px;
+			line-height: 70px;
+			font-weight: 700;
+			color: var(--primary);
+		}
+		span{
+			margin-top: 20px;
+			font-size: 40px;
+			line-height: 60px;
+			color: #E1E1E1;
+			font-family: var(--poppins);
+		}
+	}
+	.content-bottom{
+		text-align: center;
+		p{
+			margin-top: 4px;
+		}
+	}
+	.rate-progress-item{
+		&:not(:last-child){
+			margin-bottom: 10px;
+		}
+	}
+	.box-rate-progress{
+		margin-bottom: 40px;
+	}
+	.box-rate-check{
+		display: flex;
+		align-items: center;
+		gap: 20px;
+		margin-bottom: 30px;
+	}
+}
+
+.list-star{
+	display: flex;
+	align-items: center;
+	gap: 3px;
+	.icon{
+		font-size: 14px;
+		color: #FCB500;
+		&:last-child{
+			color: #E1E1E1;
+		}
+	}
+}
+.rate-progress-item{
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	.progress-rate {
+		flex-grow: 1;
+	}
+	.number-rating{
+		.icon{
+			color: #FCB500;
+		}
+	}
+}
+.flat-wrapper-search{
+	margin-top: -47px;
+}
+.box-about-text{
+	.text-1{
+		margin-bottom: 30px;
+	}
+}
+
+.box-img-gallery-1{
+	display: grid;
+	grid-template-areas: 
+		"item1 item3 item3"
+		"item2 item3 item3";
+	.item-1{
+		grid-area: item1;
+	}
+	.item-2{
+		grid-area: item2;
+	}
+	.item-3{
+		grid-area: item3;
+	}
+	img{
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+.box-img-gallery-2{
+	display: grid;
+	grid-template-areas: 
+		"item1 item2 item4 item5"
+		"item3 item3 item4 item6";
+		.item-1{
+			grid-area: item1;
+		}
+		.item-2{
+			grid-area: item2;
+		}
+		.item-3{
+			grid-area: item3;
+		}
+		.item-4{
+			grid-area: item4;
+		}
+		.item-5{
+			grid-area: item5;
+		}
+		.item-6{
+			grid-area: item6;
+		}
+		img{
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+}
+.box-about-text-v2{
+	padding-bottom: 40px;
+	border-bottom: 1px solid #F0F0F5;
+	.logo{
+		margin-bottom: 30px;
+	}
+	.text-1{
+		margin-bottom: 30px;
+	}
+	p{text-align: center;}
 }
