--- a/src/styles/scss/_reset.scss
+++ b/src/styles/scss/_reset.scss
@@ -361,6 +361,7 @@ h6 {
 	margin-bottom: 26px;
 }
 
+
 a {
 	@include transition3;
 	text-decoration: none;
@@ -592,5 +593,5 @@ tr{
 	padding: 80px 0px;
 }
 .flat-spacing-2{
-	padding: 54px 0px;
+	padding: 80px 0px 54px;
 }
