--- a/src/styles/scss/component/_button.scss
+++ b/src/styles/scss/component/_button.scss
@@ -148,3 +148,23 @@
         }
     }
 }
+
+
+.btn-search{
+    gap: 10px;
+    .icon{
+        font-size: 20px;
+    }
+    .text{
+        padding-left: 10px;
+        position: relative;
+        &::before{
+            content: "";
+            position: absolute;
+            left: 0;
+            width: 1px ;
+            height: 20px;
+            background-color: rgba(255,255,255,0.16);
+        } 
+    }
+}
