--- a/src/styles/scss/component/_form.scss
+++ b/src/styles/scss/component/_form.scss
@@ -187,3 +187,56 @@
         }
    }
 }
+.progress-rate{
+    --bs-progress-height: 9px;
+    --bs-progress-bar-bg: var(--primary);
+    --bs-progress-bg:#F5F5F5;
+    --bs-progress-border-radius: 50px;
+    .progress-bar{
+        border-radius: 50px;
+    }
+}
+
+.search-box{
+    position: relative;
+    input{
+        padding: 36px 40px;
+        box-shadow: 0px 10px 20px 0px #1405250F;
+        padding-right: 200px;
+    }
+    .tf-btn{
+        position: absolute;
+        right: 22px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
+
+.box-search-result{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 30px;
+    border-radius: 16px;
+    background-color: #FBFAFD;
+    .list-search-result{
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+    .result-item{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        padding: 12px 16px;
+        border-radius: 14px;
+        background-color: var(--white);
+        border: 1px solid var(--line-2);
+        .icon{
+            font-size: 20px;
+        }
+    }
+}
+
+
