--- a/src/styles/scss/component/_box-icon.scss
+++ b/src/styles/scss/component/_box-icon.scss
@@ -56,3 +56,20 @@
         
     }
 }
+
+.social-item{
+    width: 44px;
+    height: 44px;
+    border-radius: 999px;
+    border: 1px solid var(--line-2);
+    @include flex(center, center);
+    svg path{
+        @include transition3;
+    }
+    &:hover{
+
+        svg path{
+            fill: var(--primary);
+        }
+    }
+}
