--- a/src/styles/scss/component/_carousel.scss
+++ b/src/styles/scss/component/_carousel.scss
@@ -19,7 +19,6 @@
     }
 }
 .sw-pagination{
-    margin-top: 30px;
     gap: 8px;
     .swiper-pagination-bullet{
         width: 10px;
@@ -29,8 +28,17 @@
         margin: 0 !important;
     }
     .swiper-pagination-bullet-active{
-        background-color: var(--primary);
+        background-color: var(--primary) !important;
 
+    }
+
+    &.style-2{
+        .swiper-pagination-bullet{
+            background-color: var(--rgba-primary-4);
+        }
+    }
+    &:not(.swiper-pagination-lock) {
+        margin-top: 15px;
     }
 }
 
