--- a/src/styles/scss/_reset.scss
+++ b/src/styles/scss/_reset.scss
@@ -198,7 +198,7 @@ input[type="color"] {
 	font-size: 14px;
 	line-height: 19.6px;
 	border-radius: 999px;
-	padding: 17px 20px;
+	padding: 14.5px 20px;
 	width: 100%;
 	font-weight: 400;
 	border: 1px solid var(--line-2);
@@ -522,6 +522,9 @@ tr{
 
 .mt-16 {
 	margin-top: 16px;
+}
+.mb-6{
+	margin-bottom: 6px !important;
 }
 .mb-16{
 	margin-bottom: 16px;
