--- a/src/styles/scss/component/_button.scss
+++ b/src/styles/scss/component/_button.scss
@@ -17,6 +17,10 @@
     }  
     &.btn-sm{
         padding: 12px 20px;
+    }
+    &.btn-md{
+        padding-left: 28px;
+        padding-right: 28px;
     }  
 }
 .btn-line{
