--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -53,6 +53,29 @@
             width: calc(28% - 15px);
         }
     }
+    .tf-row-layout-v2{
+        flex-direction: row;
+        .tf-layout-content{
+            width: calc(57% - 15px);
+        }
+        .tf-layout-sidebar{
+            width: calc(43% - 15px);
+        }
+    }
+
+    .flat-title-v3{
+        margin-bottom: 50px;
+    }
+    .flat-wrap-maintenance{
+        .box-content{
+            p{
+                br{
+                    display: block;
+                }
+            }
+        }
+    }
+   
 }
 @media only screen and (min-width: 1150px) {
     .banner-page-title {
@@ -68,6 +91,9 @@
                 padding: 0 80px;
             }
         }
+    }
+    .box-cart-coupon{
+        padding-right: 140px;
     }
 }
 
@@ -265,6 +291,19 @@
             gap: 15px;
         }
     }
+    .box-card-checkout{
+        padding: 15px;
+    }
+    .table-cart{
+        .item-product{
+            br{
+                display: none;
+            }
+        }
+    }
+    .box-cart-coupon{
+        margin-bottom: 30px;
+    }
 }
 @media only screen and (max-width: 768px){
     .box-about-text{
@@ -277,6 +316,11 @@
         .ip-group-2{
             flex-wrap: wrap;
             gap: 30px;
+        }
+    }
+    .flat-wrap-checkout {
+        .group-2-ip{
+            flex-wrap: wrap;
         }
     }
 }
@@ -323,5 +367,14 @@
     }
     .creator-item{
         padding: 15px;
+    }
+    .banner-checkout{
+        flex-wrap: wrap;
+    }
+    .box-cart-coupon{
+        flex-wrap: wrap;
+        .tf-btn{
+            width: 100%;
+        }
     }
 }
