--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -695,7 +695,6 @@
 	}
 }
 .fixed-sidebar {
-	position: -webkit-sticky;
 	position: sticky;
 	top: 50px;
 }
@@ -1167,6 +1166,12 @@
 	flex-direction: column-reverse;
 	gap: 30px;
 }
+.tf-row-layout-v2{
+	display: flex;
+	flex-direction: column-reverse;
+	gap: 30px;
+}
+
 .tf-layout-content {
 	.title {
 		margin-bottom: 30px;
@@ -1529,5 +1534,269 @@
 		position: absolute;
 		top: 10%;
     	right: -70px;
+	}
+}
+
+.banner-checkout{
+	background-color: #FBFAFD;
+	padding: 30px;
+	display: flex;
+	align-items: center;
+	gap: 30px;
+	border-radius: 16px;
+	.h7{
+		color: #000000;
+	}
+	p{
+		margin-top: 10px;
+	}
+}
+.flat-title-v3{
+	margin-bottom: 30px;
+	p{
+		margin-top: 20px;
+	}
+}
+.flat-wrap-checkout{
+	.title{
+		margin-bottom: 30px;
+		line-height: 33.6px;
+	}
+	.group-2-ip{
+		display: flex;
+		gap: 20px;
+		fieldset{
+			flex-grow: 1;
+		}
+	}
+	.group-ip{
+		label{
+			margin-bottom: 12px;
+			font-weight: 600;
+		}
+		
+		&:not(:last-child){
+			margin-bottom: 20px;
+		}
+	}
+}
+.sidebar-checkout{
+	.title{
+		margin-bottom: 30px;
+		line-height: 33.6px;
+	}
+}
+.box-card-checkout{
+	border-radius: 20px;
+	padding: 30px;
+	border: 1px solid var(--line-2);
+	.box{
+		&:not(:last-child){
+			padding-bottom: 35px;
+			margin-bottom: 35px;
+			border-bottom: 1px solid var(--line-2);
+		}
+	}
+	.h9{
+		line-height: 25.2px;
+		margin-bottom: 20px;
+	}
+	.list-card-product{
+		li{
+			.item{
+				display: flex;
+				gap: 20px;
+				.name{
+					margin-bottom: 4px;
+					color: #08091B;
+				}
+				.box-img{
+					border-radius: 4px;
+					overflow: hidden;
+					flex-shrink: 0;
+				}
+			}
+			&:not(:last-child){
+				.item{
+					padding-bottom: 14px;
+					margin-bottom: 14px;
+					border-bottom: 1px dashed #E7E7E7	;
+				}
+			}
+		}
+	}
+}
+.list-checkout-credit-card{
+	.box-check{
+		display: flex;
+		gap: 10px;
+		align-items: center;
+		input{
+			&:checked{
+				~ label{
+					font-weight: 500;
+				}
+			}
+		}
+
+	}
+	.item{
+		@include flex(center, space-between);
+		flex-wrap: wrap;
+		gap: 15px;
+		margin-bottom: 20px;
+		padding-bottom: 20px;
+		border-bottom: 1px dashed #E7E7E7;
+		.box-right{
+			display: flex;
+			gap: 30px;
+			align-items: center;
+		}
+		&:last-child{
+			margin-bottom: 0;
+		}
+	}
+}
+.table-cart{
+	min-width: 750px;
+	margin-bottom: 40px;
+	thead {
+		th{
+			font-family: var(--poppins);
+			font-weight: 600;
+			font-size: 18px;
+			line-height: 27px;
+			color: var(--black-1);
+			padding-bottom: 17px;
+			border-bottom: 1px solid var(--line-2);
+			&:last-child{
+				width: 10%;
+			}
+			&:first-child{
+				width: 45%;
+			}
+			&:not(:last-child){
+				padding-right: 30px;
+			}
+		}
+		
+	}
+	tr{
+		white-space: unset;
+	}
+	tbody{
+		td{
+			padding: 40px 0px; 
+			align-content: flex-start;
+			border-bottom: 1px solid var(--line-2);
+			&:not(:last-child){
+				padding-right: 30px;
+			}
+		}
+	}
+	.item-product{
+		display: flex;
+		gap: 20px;
+		.name{
+			color: #08091B;
+			font-weight: 500;
+			font-family: var(--poppins);
+		}
+		.box-img{
+			flex-shrink: 0;
+			border-radius: 4px;
+			overflow: hidden;
+		}
+
+	}
+	.icon-close{
+		font-size: 22px;
+		color: #08091B;
+		cursor: pointer;
+	}
+}
+.box-cart-coupon{
+	display: flex;
+	gap: 10px;
+	.tf-btn{
+		padding-left: 28px;
+		padding-right: 28px;
+		flex-shrink: 0;
+	}
+}
+.box-cart-total{
+	.title{
+		padding-bottom: 20px;
+		border-bottom: 1px solid #ECF0F4;
+	}
+	.item{
+		padding: 20px 0px;
+		border-bottom: 1px solid #ECF0F4;
+	}
+	.box-btn{
+		text-align: end;
+		margin-top: 20px;
+	}
+	.tf-btn{
+		padding-left: 32px;
+		padding-right: 32px;
+	}
+}
+.flat-wrap-payment{
+	.box-content{
+		margin-top: 60px;
+		.title{
+			margin-bottom: 30px;
+		}
+		.box-check-code{
+			margin-bottom: 30px;
+			p{
+				margin-bottom: 10px;
+			}
+		}
+		.order-code{
+			border-radius: 999px;
+			padding: 8px 14px;
+			background-color: #F4F1F8;
+			display: inline-block;
+			color: var(--primary);
+		}
+	}
+}
+.flat-wrap-404{
+	.box-content{
+		margin-top: 60px;
+		.title{
+            margin-bottom: 30px;
+        }
+		p{
+			margin-bottom: 30px;
+		}
+		
+	}
+
+}
+.flat-wrap-maintenance{
+	.box-content{
+		margin-top: 60px;
+		.title{
+            margin-bottom: 30px;
+        }
+		p{
+			margin-bottom: 30px;
+			br{
+				display: none;
+			}
+		}
+		.box-social{
+			margin-bottom: 30px;
+		}
+		.list-social{
+			margin-top: 16px;
+			.icon{
+				font-size: 16px;
+				color: var(--rgba-black-2);
+			}
+		}
 	}
 }
