--- a/src/styles/scss/app.scss
+++ b/src/styles/scss/app.scss
@@ -45,7 +45,7 @@
 @import "./section";
 
 /*--------------- dashboard ---------------- */
-// @import "./dashboard";
+@import "./dashboard";
 
 /*-------------- Responsive ----------------- */
 @import "./responsive";
