--- a/src/styles/scss/_responsive.scss
+++ b/src/styles/scss/_responsive.scss
@@ -75,7 +75,9 @@
             }
         }
     }
-   
+    .card-box-3{
+        padding: 30px;
+    }
 }
 @media only screen and (min-width: 1150px) {
     .banner-page-title {
@@ -95,11 +97,13 @@
     .box-cart-coupon{
         padding-right: 140px;
     }
+    .card-box-3{
+        padding: 60px;
+    }
 }
 
 // max-width:
-@media only screen and (max-width: 1800px) {
-}
+
 
 @media only screen and (max-width: 1440px) {
     .dropdown {
@@ -170,6 +174,51 @@
         .arrow{
             display: none;
         }
+    }
+
+    .show-mb-admin{
+        display: inline-block;
+    }
+    .sidebar-menu-dashboard{
+        padding: 30px;
+        position: fixed;
+        height: 100%;
+        top: 0px;
+        left: 0;
+        bottom: 0;
+        overflow-y: auto;
+        z-index: 20;
+        transition: all .4s ease;
+        transform: translateX(0);
+        border-right: 1px solid var(--line-2);
+    }
+    .layout-wrap{
+        display: block;
+        .sidebar-menu-dashboard{
+            transform: translateX(-100%);
+        }
+        &.visible-sidebar{
+            .sidebar-menu-dashboard{
+                transform: translateX(0);
+            }
+            .overlay-dashboard{
+                opacity: 1;
+                visibility: visible;
+                transition: all .3s ease;
+            }
+        }
+    }
+    .overlay-dashboard {
+        position: fixed;
+        right: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+        background: rgba(22, 30, 45, .3);
+        transition: all .3s ease 0s;
+        visibility: hidden;
+        opacity: 0;
     }
    
 }
@@ -304,6 +353,9 @@
     .box-cart-coupon{
         margin-bottom: 30px;
     }
+    .verify-action-wrap{
+        padding: 0px 60px;
+    }
 }
 @media only screen and (max-width: 768px){
     .box-about-text{
@@ -322,6 +374,9 @@
         .group-2-ip{
             flex-wrap: wrap;
         }
+    }
+    .card-verify{
+        
     }
 }
 
