--- a/src/styles/scss/_section.scss
+++ b/src/styles/scss/_section.scss
@@ -1800,3 +1800,204 @@
 		}
 	}
 }
+.verify-action-wrap{
+	@include flex(center, space-between);
+	padding: 0px 80px;
+	position: relative;
+	overflow-x: auto;
+	gap: 60px;
+	.verify-step-item{
+		position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+		gap: 30px;
+		width: max-content;
+		flex-shrink: 0;
+		min-width: 140px;
+		.box-icon{
+			width: 100px;
+			height: 100px;
+			border-radius: 999px;
+			background-color: var(--line-2);
+			position: relative;
+			z-index: 2;
+			.icon{
+				font-size: 46px;
+				color: rgba(14, 13, 15, 0.4);
+			}
+		}
+		.title{
+			margin-bottom: 4px;
+			color: #1C1C1E;
+		}
+		&.success{
+			.box-icon{
+				background-color: var(--primary);
+				.icon{
+                    color: var(--white);
+                }
+			}
+			.title{
+				color: var(--primary);
+			}
+			&:first-child{
+				&::before{
+					position: absolute;
+					z-index: 0;
+					content: "";
+					background-color: var(--primary);
+					top: 25%;
+					height: 2px;
+					width: 174px;
+					left: -80px;
+				}
+			}
+			&:not(:first-child){
+				&::before{
+					position: absolute;
+					z-index: 0;
+					content: "";
+					background-color: var(--primary);
+					top: 25%;
+					height: 2px;
+					width: 300px;
+    				left: -240px;
+				}
+			}
+			&:last-child{
+				&::after{
+					position: absolute;
+					z-index: 0;
+					content: "";
+					background-color: var(--primary);
+					top: 25%;
+					height: 2px;
+					width: 174px;
+					right: -80px;
+				}
+			}
+		}
+	}
+	&::before{
+		content: "";
+		position: absolute;
+		left: 0;
+		right: 0;
+		height: 2px;
+		background-color: var(--line-2);
+		top: 25%;
+		min-width: 860px;
+	}
+}
+
+
+.card-box-3 {
+	padding: 15px;
+	border-radius: 16px;
+	border: 1px solid var(--line-2);
+}
+.card-verify{
+	.flat-title-verify{
+		margin-bottom: 30px;
+		.title{
+			margin-bottom: 20px;
+		}
+	}
+	.box{
+		margin-bottom: 30px;
+	}
+	label{
+		font-weight: 600;
+		font-family: var(--poppins);
+		margin-bottom: 12px;
+	}
+	.text-sub{
+		margin-top: 12px;
+	}
+	.tf-btn{
+		min-width: 196px;
+	}
+	.group-box-ip{
+		display: flex;
+		flex-wrap: wrap;
+		gap: 20px;
+	}
+	.sub-title{
+		margin-bottom: 8px;
+	}
+	ul {
+		padding-left: 20px;
+		li{
+			list-style: disc;
+		}
+	}
+	.box-correct-banner{
+		display: flex;
+		gap: 30px;
+		flex-wrap: wrap;
+		.correct-item{
+			flex-grow: 1;
+			
+		}
+	}
+	.correct-item{
+		.banner{
+			text-align: center;
+			padding: 20px 20px 0px;
+			background-color: #F4F1F8;
+			border-radius: 16px;
+			margin-bottom: 20px;
+		}
+		.correct-btn{
+			font-family: var(--poppins);
+			font-weight: 600;
+			padding: 10px 28px;
+			border-radius: 999px;
+			display: inline-flex;
+			justify-content: center;
+			gap: 10px;
+			align-items: center;
+			color: var(--white);
+			background-color: #00B7B3;
+		}
+		&.in-correct{
+			.banner{
+				background-color: rgba(246, 0, 0, 0.1);
+			}
+			.correct-btn{
+				background-color: #F60000;
+			}
+		}
+	}
+	.box-upload{
+		position: relative;
+		margin-bottom: 0;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 4px;
+		padding-left: 20px;
+		border-radius: 999px;
+		border: 1px solid var(--line-2);
+		span{
+			font-weight: 400;
+		}
+		.ip-file{
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			padding: 0;
+			margin: 0;
+			opacity: 0;
+		}
+		.tf-btn{
+			min-width: auto;
+			padding: 10px 18px;
+		}
+	}
+}
